--- a/exam-fall17/exam-fall17.ipynb
+++ b/exam-fall17/exam-fall17.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "source": [
     "import numpy as np\r\n",
     "import matplotlib.pyplot as plt\r\n",
@@ -89,12 +89,21 @@
     "    return E @ A\r\n",
     "    \r\n",
     "A = np.array([\r\n",
-    "    [1, 2, 1, 0, 0, 0, 12],\r\n",
-    "    [1, 5, 0, 1, 0, 0, 25],\r\n",
-    "    [1, 0, 0, 0, 1, 0, 6],\r\n",
-    "    [1, 1, 0, 0, 0, 1, 6]])\r\n",
+    "    [1, 2, 1, 0, 0, 12],\r\n",
+    "    [1, 5, 0, 1, 0, 25],\r\n",
+    "    [1, 0, 0, 0, 1, 6],\r\n",
+    "    [-1, -1, 0, 0, 0, 0]])\r\n",
     "\r\n",
-    "add_row(A, -1, 0, 2)\r\n",
+    "A = add_row(A, -1, 2, 0)\r\n",
+    "A = add_row(A, -1, 2, 1)\r\n",
+    "A = add_row(A, 1, 2, 3)\r\n",
+    "\r\n",
+    "A = scale_row(A, 1/2, 0)\r\n",
+    "A = scale_row(A, 1/5, 1)\r\n",
+    "\r\n",
+    "A = add_row(A, -1, 0, 1)\r\n",
+    "A = add_row(A, 1, 0, 3)\r\n",
+    "A\r\n",
     "# Ab = A.conjugate()\r\n",
     "\r\n",
     "\r\n",
@@ -105,14 +114,14 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[ 0.,  2.,  1.,  0., -1.,  0.,  6.],\n",
-       "       [ 1.,  5.,  0.,  1.,  0.,  0., 25.],\n",
-       "       [ 1.,  0.,  0.,  0.,  1.,  0.,  6.],\n",
-       "       [ 1.,  1.,  0.,  0.,  0.,  1.,  6.]])"
+       "array([[ 0. ,  1. ,  0.5,  0. , -0.5,  3. ],\n",
+       "       [ 0. ,  0. , -0.5,  0.2,  0.3,  0.8],\n",
+       "       [ 1. ,  0. ,  0. ,  0. ,  1. ,  6. ],\n",
+       "       [ 0. ,  0. ,  0.5,  0. ,  0.5,  9. ]])"
       ]
      },
      "metadata": {},
-     "execution_count": 93
+     "execution_count": 108
     },
     {
      "output_type": "display_data",
